--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ menu:
   時間軸: /archives/ || fas fa-archive
   標籤: /tags/ || fas fa-tags
   分類: /categories/ || fas fa-folder-open
+  # 關於作者: https://tw.yahoo.com/ || fas fa-heart
   # List||fas fa-list:
   #   Music: /music/ || fas fa-music
   #   Movie: /movies/ || fas fa-video
